name:                bibline
category:            Text, Console
version:             0.1.0.0
synopsis:            A command line utility for processing bibtex files
description:
  @bibline@ is a command line tool for processing bibtex files.
homepage:            https://github.com/mmn80/bibline
bug-reports:         https://github.com/mmn80/bibline/issues
author:              Călin Ardelean
maintainer:          Călin Ardelean <mmn80cpu@gmail.com>
copyright:           Copyright (c) 2016 Călin Ardelean
license:             MIT
license-file:        LICENSE.md
stability:           experimental
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/mmn80/bibline.git

library
  ghc-options:       -O2 -Wall
  exposed-modules:
    Text.Bibline,
    Text.Bibline.Types,
    Text.Bibline.Parser
  build-depends:
    base             >= 4.8 && < 5,
    text,
    pipes,
    pipes-parse,
    pipes-text
  hs-source-dirs:    src
  default-language:  Haskell2010

executable bibline
  main-is: Console.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:
    base             >= 4.8 && < 5,
    text,
    pipes,
    pipes-parse,
    pipes-text
